v10.4.0/_sources/generated/pcdsdevices.lxe.Lcls2LaserTiming.rst.txt
pcdsdevices.lxe.Lcls2LaserTiming
================================

.. currentmodule:: pcdsdevices.lxe

.. autoclass:: Lcls2LaserTiming

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - _tgt_time
          - :class:`~ophyd.signal.EpicsSignal`
          - ``:PHASCTL:DELAY_SET``
          - The internal nanosecond-expecting signal.
          - omitted
          - 
    
        * - setpoint
          - :class:`~pcdsdevices.lxe._ScaledUnitConversionDerivedSignal`
          - 
          - Setpoint which handles the timing conversion.
          - hinted
          - 
    
        * - notepad_setpoint
          - :class:`~pcdsdevices.signal.NotepadLinkedSignal`
          - ``:lxt:OphydSetpoint``
          - 
          - omitted
          - 
    
        * - notepad_readback
          - :class:`~pcdsdevices.signal.NotepadLinkedSignal`
          - ``:lxt:OphydReadback``
          - 
          - omitted
          - 
    
        * - user_offset (FCpt)
          - :class:`~pcdsdevices.signal.NotepadLinkedSignal`
          - ``{self.prefix}:lxt:OphydOffset{self.instrument}``
          - A Python-level user offset.
          - normal
          - 
    
        * - hla_enabled
          - :class:`~ophyd.signal.EpicsSignal`
          - ``:PHASCTL:HLA_ENABLED``
          - HLA status
          - omitted
          - 
    
        * - done
          - :class:`~ophyd.signal.EpicsSignal`
          - ``:PHASCTL:DELAY_MOVING``
          - 
          - omitted
          - 
    

    
    
    
    
    
    
    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: camonitor
    .. automethod:: check_hla
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: end_monitor_thread
    .. automethod:: get
    .. automethod:: move
    .. automethod:: mv
    .. automethod:: mv_ginput
    .. automethod:: mvr
    .. automethod:: post_elog_status
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: screen
    .. automethod:: set
    .. automethod:: set_current_position
    .. automethod:: set_defaults
    .. automethod:: set_position
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    .. automethod:: tweak
    .. automethod:: umv
    .. automethod:: umvr
    .. automethod:: wait
    .. automethod:: wm
    .. automethod:: wm_update
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: actuate
    .. autoattribute:: actuate_value
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: connection_timeout
    .. autoattribute:: dial_pos
    .. autoattribute:: done_value
    .. autoattribute:: egu
    .. autoattribute:: high_limit
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: limits
    .. autoattribute:: low_limit
    .. autoattribute:: moving
    .. autoattribute:: position
    .. autoattribute:: put_complete
    .. autoattribute:: readback
    .. autoattribute:: settle_time
    .. autoattribute:: stop_signal
    .. autoattribute:: stop_value
    .. autoattribute:: subscriptions
    .. autoattribute:: timeout
    .. autoattribute:: verbose_name
    
    